# res

./: .env.example  .gitignore  .replit  DEPLOYMENT.txt  app.py  app_description.txt  db_config.json  pyproject.toml  render.yaml  replit.md  requirements.txt  resume_app.db
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-Build-a-full-stack-Progressive-Web-App-PWA-using-Python_1775316776213.txt
models/: contact_message.py  job.py  job_post.py  resume.py  settings.py
routes/: admin.py  chat.py  interview.py  job_board.py  jobs.py  linkedin.py  resume.py
static/: manifest.json  service-worker.js
static/css/: style.css
templates/: _macros.html  about.html  base.html  career_chat.html  contact.html  cookie_policy.html  index.html  interview_prep.html  job_board.html  job_board_detail.html  job_tracker.html  linkedin_optimizer.html  privacy.html  resume_builder.html  terms.html
templates/admin/: dashboard.html  login.html
utils/: ai_engine.py  analyzer.py  data_layer.py  db_manager.py  firestore_manager.py  job_aggregator.py  parser.py  pdf_exporter.py
